# rrc-tui

./: .gitignore  CONFIG.md  README.md  pyproject.toml
rrc_tui/: __init__.py  client.py  config.py  constants.py  debug.py  envelope.py  logging_manager.py  main.py  tui.py  types.py  utils.py
